--- a/ClubCloud.WebSite.Navigation/ClubCloud.WebSite.Navigation.csproj
+++ b/ClubCloud.WebSite.Navigation/ClubCloud.WebSite.Navigation.csproj
@@ -66,6 +66,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentTypes\NavigationEntry\NavigationEntry.EventReceiver.cs" />
     <Compile Include="Features\ClubCloud WebSite Navigation\ClubCloud WebSite Navigation.EventReceiver.cs">
       <DependentUpon>ClubCloud WebSite Navigation.feature</DependentUpon>
     </Compile>
