--- a/ClubCloud.Afhangen.WebSite/Modules/Angular/bower.json
+++ b/ClubCloud.Afhangen.WebSite/Modules/Angular/bower.json
@@ -18,7 +18,7 @@
     "angular-touch": "~1.4.3",
     "angular-i18n": "~1.4.3",
     "angularAMD": "~0.2.1",
-    "angular-ui-router": "~0.2.15",
+    "angular-ui-router": "=0.2.14",
     "ui-router-extras": "~0.0.14",
     "angular-formly": "~6.23.2"
   },
